[gd_scene load_steps=7 format=3 uid="uid://c03hm0bmfwurj"]

[ext_resource type="Script" path="res://Scenes/Enemy.gd" id="1_4jori"]
[ext_resource type="Texture2D" uid="uid://cci3qstcl0yca" path="res://icon.svg" id="2_4ysix"]
[ext_resource type="PackedScene" uid="uid://3kycacu8y2q4" path="res://01_Sprites/enemy_sprites.tscn" id="3_gdp6d"]
[ext_resource type="AudioStream" uid="uid://b6buqfgaiuvx" path="res://02_Sound/SFX/SFX_EnemyWalk.mp3" id="4_xaq7b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_00v24"]
radius = 33.0151

[sub_resource type="CircleShape2D" id="CircleShape2D_7i0x0"]
radius = 450.0

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(0.4, 0.4)
collision_layer = 3
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_4jori")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_4ysix")

[node name="Enemy Sprites" parent="." instance=ExtResource("3_gdp6d")]
position = Vector2(0, -67.5)
scale = Vector2(3.11914, 3.11914)
animation = &"Enemy_Stun"
frame_progress = 0.594535

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_00v24")

[node name="Area2D_vsPlayer" type="Area2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D_hitplayer" type="CollisionShape2D" parent="Area2D_vsPlayer"]
scale = Vector2(0.6, 0.6)
shape = SubResource("CircleShape2D_00v24")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 3
radius = 51.05
avoidance_layers = 3
avoidance_mask = 3
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7i0x0")

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="Timer_Stun" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-6.10352e-05, 0)
stream = ExtResource("4_xaq7b")
autoplay = true
max_distance = 320.0

[connection signal="body_entered" from="Area2D_vsPlayer" to="." method="_on_area_2d_vs_player_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
